update schema and add endpoint forgot pw & profiles
