# src/docs/swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://192.168.20.32:2051",
+      "url": "https://adapler-api.inidito.my.id",
       "description": "Development Server"
     }
   ],
@@ -17,6 +17,12 @@
     },
     {
       "name": "Auth"
+    },
+    {
+      "name": "Forgot Password"
+    },
+    {
+      "name": "Profiles"
     }
   ],
   "paths": {
@@ -139,6 +145,137 @@
         },
         "responses": {
           "200": { "description": "Login successful." }
+        }
+      }
+    },
+    "/forgot-password": {
+      "post": {
+        "tags": ["Forgot Password"],
+        "summary": "Forgot password",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": { "type": "string" }
+                },
+                "required": ["email"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OTP code for password reset has been sent to your email."
+          }
+        }
+      }
+    },
+    "/forgot-password/verify-otp": {
+      "post": {
+        "tags": ["Forgot Password"],
+        "summary": "Verify OTP",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": { "type": "string" },
+                  "code": { "type": "string" }
+                },
+                "required": ["email", "code"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": { "description": "OTP verification successful." }
+        }
+      }
+    },
+    "/forgot-password/reset-password": {
+      "post": {
+        "tags": ["Forgot Password"],
+        "summary": "Reset password",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "token": { "type": "string" },
+                  "newPassword": { "type": "string" }
+                },
+                "required": ["token", "newPassword"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": { "description": "Password successfully updated." }
+        }
+      }
+    },
+    "/profiles": {
+      "put": {
+        "tags": ["Profiles"],
+        "summary": "Update user profile",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "full_name": { "type": "string" },
+                  "birth_date": { "type": "string", "format": "date" },
+                  "bio": { "type": "string" },
+                  "profile_image": { "type": "string", "format": "binary" },
+                  "jenjang_pendidikan": { "type": "string" },
+                  "jurusan": { "type": "string" },
+                  "target_akademik": { "type": "string" },
+                  "jam_belajar_harian": { "type": "integer" }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": { "description": "Profile updated successfully." }
+        }
+      },
+      "get": {
+        "tags": ["Profiles"],
+        "summary": "Get user profile",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/profiles/photo-profile": {
+      "get": {
+        "tags": ["Profiles"],
+        "summary": "Get photo profile user",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/profiles/all": {
+      "get": {
+        "tags": ["Profiles"],
+        "summary": "Get all users (admin only)",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
         }
       }
     }
